Fixed z-index of hearts so they're coming from the inside of the envelope.

--- a/src/components/hearts.css
+++ b/src/components/hearts.css
@@ -3,7 +3,7 @@
   top: 90px;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 2;
 }
 
 .heart {
